# Underleaf

./: .env.example  .gitignore  .pre-commit-config.yaml  .prettierignore  AGENTS.md  CLAUDE.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  Makefile  README.md  SECURITY.md  package-lock.json  playwright.config.ts
backend/: alembic.ini  pyproject.toml  requirements.txt  test.db
backend/alembic/: env.py
backend/alembic/versions/: 001_initial.py  002_rbac_invites_comments.py  003_add_email_verified_to_users.py  004_add_engine_to_projects.py  005_add_snapshots.py  006_add_totp_2fa.py  007_add_oauth_columns.py  008_add_snapshot_created_by.py  009_add_artifact_hash.py
backend/app/: main.py
backend/app/api/v1/: ai.py  auth.py  comments.py  compile.py  invites.py  members.py  oauth.py  projects.py
backend/app/core/: config.py  database.py  logging.py  metrics.py  security.py
backend/app/models/: models.py
backend/app/schemas/: collaboration.py  compile.py  project.py  snapshot.py  user.py
backend/app/services/: email_service.py  minio_service.py  rabbitmq_service.py  redis_service.py
backend/tests/: conftest.py  test_auth.py  test_auth_edge_cases.py  test_auth_new_endpoints.py  test_comments.py  test_compile.py  test_files.py  test_files_extended.py  test_health.py  test_invites.py  test_members.py  test_permissions.py  test_projects.py
collab-server/: Dockerfile  package-lock.json  package.json
deploy/: docker-compose.dev.yml  docker-compose.prod.yml
docs/: API.md  ARCHITECTURE.md  ROADMAP.md
frontend/: .eslintrc.cjs  Dockerfile  debug-puppeteer.mjs  (+5 more)
(+65 files in other folders)
